--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,4 +1,4 @@
-@media (pointer: fine) and (min-width: 1025px) {
+@media (width >= 1400px) {
 	.mobile-movement {
 		display: none;
 	}
@@ -23,7 +23,7 @@
 	}
 }
 
-@media (pointer: coarse) and (orientation: portrait) {
+@media (width <= 1400px) and (orientation: portrait) {
 	.main-view {
 		display: none;
 	}
